--- a/html/navbar.html
+++ b/html/navbar.html
@@ -91,28 +91,28 @@
             <!-- Navigation -->
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="/index.html">
-                  <i class="ni ni-tv-2 text-primary"></i> Dashboard
+                <a class="nav-link" href="/">
+                  <i class="ni ni-tv-2 text-primary"></i>แดชบอร์ด
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/examples/icons.html">
-                  <i class="ni ni-planet text-blue"></i> Register
+                <a class="nav-link" href="/eventmanagement/">
+                  <i class="ni ni-planet text-blue"></i>การจัดการกิจกรรม
                 </a>
               </li>
             </ul>
             <!-- Divider -->
             <hr class="my-3">
             <!-- Heading -->
-            <h6 class="navbar-heading text-muted">Documentation</h6>
+            <!-- <h6 class="navbar-heading text-muted">Documentation</h6> -->
             <!-- Navigation -->
-            <ul class="navbar-nav mb-md-3">
+            <!-- <ul class="navbar-nav mb-md-3">
               <li class="nav-item">
                 <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/getting-started/overview.html">
                   <i class="ni ni-spaceship"></i> Getting started
                 </a>
               </li>
-            </ul>
+            </ul> -->
           </div>
         </div>
       </nav>
