--- a/html/layout.html
+++ b/html/layout.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Start your development with a Dashboard for Bootstrap 4.">
   <meta name="author" content="Creative Tim">
+  <script src="/js/jquery.min.js"></script>
   <title>Course/Event Management</title>
   <!-- Favicon -->
   <link href="/img/brand/favicon.png" rel="icon" type="image/png">
@@ -30,7 +31,8 @@
   </div>
   <!-- Argon Scripts -->
   <!-- Core -->
-  <script src="/vendor/jquery/dist/jquery.min.js"></script>
+  <script src="/js/repeater.js"></script>
+  <!-- <script src="/vendor/jquery/dist/jquery.min.js"></script> -->
   <script src="/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Optional JS -->
   <script src="/vendor/chart.js/dist/Chart.min.js"></script>
