--- a/html/layout.html
+++ b/html/layout.html
@@ -26,7 +26,7 @@
   <!-- Main content -->
   <div class="main-content">
     <!-- Page content -->
-    {{template "content"}}
+    {{template "content" .}}
     {{template "footer"}}
   </div>
   <!-- Argon Scripts -->
