--- a/html/addEvent.html
+++ b/html/addEvent.html
@@ -84,7 +84,7 @@
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-username">ชื่อหลักสูตร / กิจกรรม</label>
-                    <input type="text" id="input-username" class="form-control form-control-alternative" placeholder="กรอกชื่อหลักสูตร">
+                    <input type="text" name="name" class="form-control form-control-alternative" placeholder="กรอกชื่อหลักสูตร">
                   </div>
                 </div>
               </div>
@@ -92,13 +92,13 @@
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-first-name">สถานที่</label>
-                    <input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="ระบุสถานที่">
+                    <input type="text" name="place" class="form-control form-control-alternative" placeholder="ระบุสถานที่">
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-last-name">ผู้พูด</label>
-                    <input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="กรอกชื่อผู้บรรยาย">
+                    <input type="text" name="speaker" class="form-control form-control-alternative" placeholder="กรอกชื่อผู้บรรยาย">
                   </div>
                 </div>
               </div>
@@ -106,7 +106,7 @@
                 <div class="col-lg-12">
                   <div class="form-group">
                     <label>รายละเอียดโครงการ</label>
-                    <textarea rows="4" class="form-control form-control-alternative" placeholder="ระบุรายละเอียดของโครงการ"></textarea>
+                    <textarea rows="4" name="detail" class="form-control form-control-alternative" placeholder="ระบุรายละเอียดของโครงการ"></textarea>
                   </div>
                 </div>
               </div>
@@ -114,13 +114,13 @@
                 <div class="col-lg-3 col-md-4 col-sm-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-first-name">ระหว่างเวลา</label>
-                    <input type="time" name="start_time_origin" class="form-control form-control-alternative">
+                    <input type="time" name="start_time" class="form-control form-control-alternative">
                   </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-last-name">ถึงเวลา</label>
-                    <input type="time" name="end_time_origin" class="form-control form-control-alternative">
+                    <input type="time" name="end_time" class="form-control form-control-alternative">
                   </div>
                 </div>
               </div>
@@ -128,13 +128,13 @@
                 <div class="col-lg-3 col-md-4 col-sm-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-first-name">ระหว่างวันที่</label>
-                    <input type="date" name="start_date_origin" class="form-control form-control-alternative">
+                    <input type="date" name="start_date" class="form-control form-control-alternative">
                   </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-last-name">ถึงวันที่</label>
-                    <input type="date" name="end_date_origin" class="form-control form-control-alternative">
+                    <input type="date" name="end_date" class="form-control form-control-alternative">
                   </div>
                 </div>
               </div>
@@ -142,51 +142,21 @@
                 <div class="col-lg-3 col-md-4 col-sm-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-first-name">รับจำนวน</label>
-                    <input type="number" min="0" name="limit_origin" class="form-control form-control-alternative">
+                    <input type="number" min="0" name="limit" class="form-control form-control-alternative">
                   </div>
                 </div>
               </div>
-              <div id="repeater">
-                <div class="row">
-                  <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="form-group">
-                      <button type="button" class="btn btn-primary repeater-add-btn">เพิ่มรุ่น</button>
-                    </div>
-                  </div>
-                </div>
-                <div class="items" data-group="add-branch">
-                  <h6 class="heading-small text-muted mb-4">รุ่นที่ x</h6>
-                  <div class="row">
-                    <div class="col-lg-3 col-md-4 col-sm-6">
-                      <div class="form-group">
-                        <label class="form-control-label" for="input-first-name">ระหว่างวันที่</label>
-                        <input type="date" data-name="start_date" class="form-control form-control-alternative">
-                      </div>
-                    </div>
-                    <div class="col-lg-3 col-md-4 col-sm-6">
-                      <div class="form-group">
-                        <label class="form-control-label" for="input-last-name">ถึงวันที่</label>
-                        <input type="date" data-name="end_date" class="form-control form-control-alternative">
-                      </div>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-lg-3 col-md-4 col-sm-6">
-                      <div class="form-group">
-                        <label class="form-control-label" for="input-first-name">รับจำนวน</label>
-                        <input type="number" min="0" data-name="limit" class="form-control form-control-alternative">
-                      </div>
-                    </div>
-                    <div class="col-lg-3 col-md-4 col-sm-6">
-                      <div class="form-group">
-                        <label class="form-control-label" for="input-first-name"></label>
-                        <button id="remove-btn" style="margin-top: 33px;" class="btn btn-danger" onclick="$(this).parents('.items').remove()">X</button>
-                      </div>
-                    </div>
+              <div class="row">
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                  <div class="form-group">
+                    <button type="button" id="add" class="btn btn-primary repeater-add-btn">เพิ่มรุ่น</button>
                   </div>
                 </div>
               </div>
+              <div id="repeaters">
 
+              </div>
+              <hr class="my-4">
               <div class="row">
                 <div class="col-lg-12">
                   <div class="form-group">
@@ -204,24 +174,73 @@
   </div>
 </div>
 <script>
-  $(document).ready(function () {
+  var i = 0;
 
-    $("#repeater").createRepeater({
-      showFirstItemToDefault: false,
-    });
+  $('#add').click(function () {
+    i++;
+    console.log(i);
+    text =
+      `<div id="row` + i +`">
+          <div class="row">
+            <div class="col-lg-3 col-md-4 col-sm-6">
+              <div class="form-group">
+                <label class="form-control-label" for="input-first-name">ระหว่างเวลา</label>
+                <input type="time" name="start_time" class="form-control form-control-alternative">
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6">
+              <div class="form-group">
+                <label class="form-control-label" for="input-last-name">ถึงเวลา</label>
+                <input type="time" name="end_time" class="form-control form-control-alternative">
+              </div>
+            </div>
+          </div>
+        <div class="row">
+          <div class="col-lg-3 col-md-4 col-sm-6">
+            <div class="form-group">
+              <label class="form-control-label" for="input-first-name">ระหว่างวันที่</label>
+              <input type="date" name="start_date" class="form-control form-control-alternative">
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-sm-6">
+            <div class="form-group">
+              <label class="form-control-label" for="input-last-name">ถึงวันที่</label>
+              <input type="date" name="end_date" class="form-control form-control-alternative">
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-sm-6">
+            <div class="form-group">
+              <label class="form-control-label" for="input-first-name">รับจำนวน</label>
+              <input type="number" min="0" name="limit" class="form-control form-control-alternative">
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-sm-3">
+            <div class="form-group">
+              <label class="form-control-label" for="input-first-name"></label>
+              <button id="` + i + `" style="margin-top: 33px;" class="btn btn-danger btn-remove">X</button>
+            </div>
+          </div>
+      </div>`;
+    $("#repeaters").append(text);
+  });
+
+  $(document).on('click', '.btn-remove', function () {
+    var button_id = $(this).attr('id');
+    console.log(button_id);
+
+    $("#row" + button_id).remove();
   });
 
   $('#repeater_form').on('submit', function (event) {
-      event.preventDefault();
-      $.ajax({
-        url: "http://localhost:8000/eventmanagement/add/toDB",
-        method: "POST",
-        data: $(this).serialize(),
-        success: function (data) {
-
-        }
-      });
+    event.preventDefault();
+    $.ajax({
+      url: '/eventmanagement/add/toDB/',
+      method: "POST",
+      data: $(this).serialize(),
+      success: function (data) {
+        window.location = "/eventmanagement/";
+      }
     });
-    
+  });
 </script>
 {{end}}
