--- a/html/register.html
+++ b/html/register.html
@@ -85,17 +85,16 @@
           </div>
         </div>
         <div class="card-body ">
-          <form method="post" id="repeater_form">
+          <form method="post" id="form_event">
             <div class="pl-lg-4" >
               <div class="row justify-content-center">
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-username">เลือกรุ่นของกิจกรรม</label>
-                    <select class="form-control form-control-alternative">
-                      <option value="volvo">Volvo</option>
-                      <option value="saab">Saab</option>
-                      <option value="mercedes">Mercedes</option>
-                      <option value="audi">Audi</option>
+                    <select name="eventSelected" class="form-control form-control-alternative">
+                      {{ range $index, $value := .option }}
+                      <option value="{{.Id}}">{{$.main.Name}} รุ่นที่ {{add $index 1}} ({{$value.StartDate}} - {{$value.EndDate}} {{$value.StartTime}} - {{$value.EndTime}}) {{$value.Count}}/{{$value.Limit}}</option>
+                      {{end}}
                     </select>
                   </div>
                 </div>
@@ -149,4 +148,18 @@
     </div>
   </div>
 </div>
+
+<script>
+$('#form_event').on('submit', function (event) {
+  event.preventDefault();
+  $.ajax({
+    url: '/register/add/toDB/',
+    method: "POST",
+    data: $(this).serialize(),
+    success: function (data) {
+      window.location = "/events/";
+    }
+  });
+});
+</script>
 {{end}}
