--- a/html/eventManagement.html
+++ b/html/eventManagement.html
@@ -116,7 +116,7 @@
                                     </label>
                                 </td>
                                 <td>
-                                    <button class="btn btn-success btn-sm"><i class="far fa-eye"></i></button>
+                                    <a class="btn btn-success btn-sm" href="/eventmanagement/export/{{.Id}}"><i class="fas fa-file-export"></i></a>
                                     <a class="btn btn-warning btn-sm" href="/eventmanagement/update/{{.Id}}"><i
                                             class="far fa-edit"></i></a>
                                     <a class="btn btn-danger btn-sm" href="/eventmanagement/delete/{{.Id}}"><i
