edit delete event

--- a/html/addEvent.html
+++ b/html/addEvent.html
@@ -238,6 +238,7 @@
       method: "POST",
       data: $(this).serialize(),
       success: function (data) {
+        alert("ลงทะเบียนสำเร็จ")
         window.location = "/eventmanagement/";
       }
     });
