--- a/html/eventManagement.html
+++ b/html/eventManagement.html
@@ -119,7 +119,7 @@
                                     <a class="btn btn-success btn-sm" href="/eventmanagement/export/{{.Id}}"><i class="fas fa-file-export"></i></a>
                                     <a class="btn btn-warning btn-sm" href="/eventmanagement/update/{{.Id}}"><i
                                             class="far fa-edit"></i></a>
-                                    <a class="btn btn-danger btn-sm" href="/eventmanagement/delete/{{.Id}}"><i
+                                    <a class="btn btn-danger btn-sm" onclick="(function(){alert('ลบสำเร็จ');})()" href="/eventmanagement/delete/{{.Id}}"><i
                                             class="far fa-trash-alt"></i></a>
                                 </td>
                             </tr>
